fix method and action error on post forms as they were reversed, add error message for passwords not matching

--- a/public/stylesheets/signup.css
+++ b/public/stylesheets/signup.css
@@ -54,6 +54,12 @@
         outline: none;
     }
 
+.signup__passwordError {
+    background-color: inherit;
+    color: red;
+    padding-left: 15px;
+    font-size: .7rem;
+}
 
 
 
