--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <content class="home__contentContainer">
   <h2 class="home__welcome">Welcome</h2>
-  <form action="POST" method="/login">
+  <form action="/login" method="POST">
     <div class="input__row">
       <label>Email Address</label>
       <div class="input__rowIconAndText">
