add dateAndTime virtual for message schema, custom return string for desired format

--- a/views/messageBoard.ejs
+++ b/views/messageBoard.ejs
@@ -9,7 +9,7 @@
       <div class="messageBoard__postDetails">
         <h3><%= post.title%></h3>
         <div><%= post.author.username%></div>
-        <div><%= post.timestamp%></div>
+        <div><%= post.dateAndTime%></div>
       </div>
       <button>delete post</button>
     </div>
