--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -14,8 +14,10 @@ nav{
         font-size: 1.55rem;
         cursor: pointer;
         color: rgb(60, 79, 167);
-
     }
+        nav div a h1:hover {
+            color: white;
+        }
     nav div p {
         color: rgb(76, 76, 76);
         font-size: .75rem;
@@ -34,5 +36,9 @@ nav ul {
             all: unset;
             cursor: pointer;
             color: rgb(60, 79, 167);
+            font-size: 1rem;
 
+        }
+        nav ul li a:hover  {
+            color: white;
         }
