functionality for error login messages working through req.flash('error')

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,6 +30,9 @@
         />
       </div>
     </div>
+    <% if (message) { %>
+    <div class="inputError"><%= message%></div>
+    <% } %>
     <button class="submitBtn" type="submit">Log In</button>
   </form>
   <div class="home__signUpRow">
