add sanitization to login__post, text-align center to inputError css

--- a/public/stylesheets/shared/input.css
+++ b/public/stylesheets/shared/input.css
@@ -1,6 +1,6 @@
 .inputError {
     background-color: inherit;
+    text-align: center;
     color: red;
-    padding-left: 15px;
     font-size: .7rem;
 }
