--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -32,13 +32,13 @@ nav ul {
         all: unset;
         margin: 0 10px;
     }
-        nav ul li a  {
+        nav ul li a, nav ul li button  {
             all: unset;
             cursor: pointer;
             color: rgb(60, 79, 167);
             font-size: 1rem;
 
         }
-        nav ul li a:hover  {
+        nav ul li a:hover, nav ul li button:hover  {
             color: white;
         }
