--- a/views/new-post.ejs
+++ b/views/new-post.ejs
@@ -1,6 +1,6 @@
 <content class="newPost__container">
   <h2>new post</h2>
-  <form action="/post/new-post" method="POST">
+  <form action="/message-board/post/new-post" method="POST">
     <label for="title" class="hidden">Post Title</label>
     <input type="text" name="title" placeholder="Post Title" />
     <label for="textContent" class="hidden">Post Content</label>
