--- a/views/messageBoard.ejs
+++ b/views/messageBoard.ejs
@@ -12,7 +12,19 @@
           <div>By <%= post.author.username%> at <%= post.dateAndTime%></div>
         </div>
         <form method="POST" action="/message-board/delete/<%=post.id%>">
+          <% if(user.username === post.author.username || user.admin === true)
+          {%>
           <button type="submit" class="messageBoard__deletePostBtn">🗑️</button>
+          <%}else { %>
+          <button
+            disabled
+            type="submit"
+            class="messageBoard__deletePostBtnDisabled"
+          >
+            🗑️
+          </button>
+
+          <%}%>
         </form>
       </div>
 
